[package]
name = "steam-booster-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamworks = { version = "0.10.0", features = ["raw-bindings"] }
text_io = "0.1.12"
tokio = { version = "1.29.1", features = ["full"] }
